apis for(get ReportedPosts + get Report by Post) + its swaggers  / apis for(get accepted salons + apis to get barber details + api to get salons with details .
